# SDL_desktop

./: .gitignore  CMakeLists.txt  README.md  notes.txt
examples/: calculator.c  contacts.c  file_browser.c  main copy.c  main.c  video_demo.c
include/: button.h  file_dialog.h  label.h  menu_bar.h  panel.h  textbox.h  video_player.h  widget.h  window.h
src/: button.c  file_dialog.c  label.c  menu_bar copy.c  menu_bar.c  panel.c  textbox.c  video_player.c  widget.c  window copy.c  window.c
